# warikan

./: .dockerignore  .env.example  .gitignore  .mise.toml  LICENSE  README.md  docker-compose.yml
backend/: .golangci.yml  Cargo.toml  Dockerfile  Makefile  go.mod  go.sum  go.work  openapi.yaml
backend/cmd/migrate/: main.go
backend/expense/v1/: expense.pb.go  expense_grpc.pb.go
backend/gateway/: Dockerfile  go.mod  go.sum  gqlgen.yml  package.json  wrangler.toml
backend/gateway/cmd/: main.go
backend/gateway/graph/schema/: schema.graphqls
backend/gateway/internal/: schema.go
backend/group/v1/: group.pb.go  group_grpc.pb.go
backend/migrations/: 000001_create_groups.sql  000002_create_members.sql  000003_create_expenses.sql  000004_create_expense_splits.sql  001_initial_schema.sql  20250722235017_add_expenses_table.sql  20250723000000_rename_paid_by_column.sql  20250723000001_fix_expense_splits_amount_type.sql  ci_schema.sql  simplified_schema.sql
backend/proto/: buf.gen.yaml
backend/proto/expense/v1/: expense.proto
backend/proto/group/v1/: group.pb.go  group.proto  group_grpc.pb.go
backend/proto/settlement/v1/: settlement.proto
backend/services/group/: .env.example  Dockerfile  Makefile  coverage.html  go.mod  go.sum  integration_test.go  integration_test_runner.go  wrangler.toml
backend/services/group/internal/: validation_test.go
backend/settlement/v1/: settlement.pb.go  settlement_grpc.pb.go
backend/src/: main.rs  models.rs
backend/src/routes/: expenses.rs  groups.rs  health.rs  members.rs  mod.rs  settlements.rs
frontend/: Dockerfile  (+10 more)
(+119 files in other folders)
